--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "pl.osmalek.bartek.jamplayer"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 2
         versionName "0.2.0"
         vectorDrawables.useSupportLibrary = true
@@ -36,27 +36,32 @@ repositories {
         name 'glide-snapshot'
         url 'http://oss.sonatype.org/content/repositories/snapshots'
     }
+    maven {
+        url "https://maven.google.com"
+    }
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:support-annotations:25.3.1'
-    compile 'com.android.support:palette-v7:25.3.1'
-    compile 'com.github.bumptech.glide:glide:4.0.0-SNAPSHOT'
+    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
+    compile 'com.android.support:design:26.0.0-beta2'
+    compile 'com.jakewharton:butterknife:8.6.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:recyclerview-v7:26.0.0-beta2'
+    compile 'com.android.support:support-v4:26.0.0-beta2'
+    compile 'com.android.support:cardview-v7:26.0.0-beta2'
+    compile 'com.android.support:support-annotations:26.0.0-beta2'
+    compile 'com.android.support:transition:26.0.0-beta2'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
     compile 'com.github.florent37:glidepalette:2.0.1'
-    compile 'com.annimon:stream:1.1.4'
+    compile 'com.annimon:stream:1.1.7'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.android.support:support-vector-drawable:26.0.0-beta2'
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.2.9'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    testCompile 'org.mockito:mockito-core:2.6.8'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:palette-v7:26.0.0-beta2'
+    compile "com.android.support:support-core-utils:26.0.0-beta2"
 }
-apply plugin: 'me.tatarka.retrolambda'
