--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha7'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-}
-
-plugins {
-    id "me.tatarka.retrolambda" version "3.4.0"
 }
 
 allprojects {
